warnings fix in full project and small adjustments